--- a/html/website2.html
+++ b/html/website2.html
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div >
-          <img src="./images/icon2.svg" alt="icon2">
+          <img class="second" src="./images/icon2.svg" alt="icon2">
           <div class="imgandtext">
             <span class="spantext">Second source income</span>
             <p  class="paragraphText">Seasoned property managers, professional housekeepers, and data-driven revenue managers run your second
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div >
-          <img src="./images/icon3.svg" alt="icon3">
+          <img src="./images/icon3.svg"class="second"  alt="icon3">
           <div class="imgandtext">
             <span class="spantext text3">Peace of mind</span>
             <p  class="paragraphText">24x7 customer care and dedicated relationship managers ensure all booking requests are serviced
@@ -114,7 +114,7 @@
       <p>Here's what our home owners have to say about our services.</p>
     </div>
     <div class="GuestHouserOwner">
-      <img src="./images/avatar.png" alt="">
+      <img src="./images/avatar.png" alt=""> 
       <div class="commentOwner">
         <p>I gave my place to GuestHouser in November 2018 and so far am happy to have them take care of my home and generate income for me. I am happy with the team for responding immediately to my queries.
         </p>
@@ -124,8 +124,8 @@
           <p>Skylark Apartmens,Alto Porvorim,Goa</p>
         </div>
       </div>
-      
     </div>
+  
     <div class="coreTeam">
       <h1>The Core team</h1>
       <div class="parentCard">
